
[Test/cassette_TestCommand/TestCommand/.gitignored_files - 1]
{
  "results": [
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Empty_cyclonedx_1.4_output - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Empty_cyclonedx_1.5_output - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Empty_gh-annotations_output - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Empty_sarif_output - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Empty_spdx_2.3_output - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Go_project_with_an_overridden_go_version - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GO-2024-2598",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2599",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2600",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2609",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2610",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2687",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2024-2887",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2888",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2963",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3105",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3106",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3107",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2025-3373",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3420",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3447",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3563",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3750",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3751",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3849",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3956",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4006",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4007",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4008",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4009",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4010",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4011",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4012",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4013",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4014",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4015",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4155",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4175",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Go_project_with_an_overridden_go_version,_recursive - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GO-2024-2598",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2599",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2600",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2609",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2610",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2687",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2024-2887",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2888",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2963",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3105",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3106",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3107",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2025-3373",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3420",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3447",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3563",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3750",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3751",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3849",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3956",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4006",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4007",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4008",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4009",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4010",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4011",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4012",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4013",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4014",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4015",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4155",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4175",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GO-2024-2598",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2599",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2600",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2609",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2610",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2687",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2024-2887",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2888",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2963",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3105",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3106",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3107",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2025-3373",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3420",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3447",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3563",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3750",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3751",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3849",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3956",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4006",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4007",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4008",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4009",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4010",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4011",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4012",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4013",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4014",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4015",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4155",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4175",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Go_project_with_an_overridden_go_version_and_licences - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GO-2024-2598",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2599",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2600",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2609",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2610",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2687",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2024-2887",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2888",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-2963",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3105",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3106",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3107",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2025-3373",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3420",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3447",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3563",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3750",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3751",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3849",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3956",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4006",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4007",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4008",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4009",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4010",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4011",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4012",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4013",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4014",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4015",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4155",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4175",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/PURL_SBOM_case_sensitivity_(api) - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2018-25032",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "ALPINE-CVE-2022-37434",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Sarif_with_vulns - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Scan_locks-many - 1]
{
  "results": [
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/Scan_locks-many#01 - 1]
{
  "results": [
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/all_supported_lockfiles_in_the_directory_should_be_checked - 1]
{
  "results": [
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/config_file_can_be_broad - 1]
{
  "results": [
    {},
    {
      "vulns": [
        {
          "id": "CVE-2023-39137",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "CVE-2023-39139",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-9f46-5r25-5wfm",
          "modified": "<RFC3339 date with the year 2024>"
        }
      ]
    },
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/config_file_is_invalid - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/config_files_should_not_have_multiple_ignores_with_the_same_id - 1]
{
  "results": [
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/config_files_should_not_have_multiple_ignores_with_the_same_id#01 - 1]
{
  "results": [
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/cyclonedx_1.4_output - 1]
{
  "results": [
    {},
    {
      "vulns": [
        {
          "id": "GHSA-9f46-5r25-5wfm",
          "modified": "<RFC3339 date with the year 2024>"
        }
      ]
    },
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/cyclonedx_1.5_output - 1]
{
  "results": [
    {},
    {
      "vulns": [
        {
          "id": "GHSA-9f46-5r25-5wfm",
          "modified": "<RFC3339 date with the year 2024>"
        }
      ]
    },
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/folder_of_supported_sbom_with_only_unimportant - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "UBUNTU-CVE-2017-11164",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/folder_of_supported_sbom_with_only_unimportant#01 - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "UBUNTU-CVE-2017-11164",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/folder_of_supported_sbom_with_vulns - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2011-3374",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-0501",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-3462",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2020-27350",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2020-3810",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-4685-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-4808-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2019-18276",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-3715",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2016-2781",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-18018",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-0684",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-5278",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {
      "vulns": [
        {
          "id": "DLA-3482-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2022-1664",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-6297",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3022-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5147-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2019-5094",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-5188",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-1304",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3910-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-4535-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-9493-h29p-rfm2",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-cgrx-mc8f-2prm",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-f3fp-gc8g-vw66",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-g2j6-57v7-gm8c",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-jfvp-7x6p-h2pv",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-m8cg-xc2p-r3fc",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-qw9x-cqr3-wc7r",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-v95c-p5hm-xq8f",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-vpvm-3wq2-2wvm",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-xr7r-f8xq-vfvv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2022-0274",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2022-0452",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2023-1627",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2023-1682",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2023-1683",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2024-2491",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2024-3110",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4096",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4097",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4098",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-p782-xgp4-8hr8",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GO-2022-0493",
          "modified": "<RFC3339 date with the year 2024>"
        }
      ]
    },
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2022-1271",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5122-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2017-0379",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-7526",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-0495",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-6829",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-13627",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-33560",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-40528",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-2236",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2017-10790",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-1000654",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-6003",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-46848",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-12133",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3263-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-4061-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5863-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2016-3709",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2016-9318",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-0663",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-15412",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-16931",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-16932",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-18258",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-5130",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-5969",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-7375",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-7376",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-8872",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-9047",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-9048",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-9049",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-9050",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-14404",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-14567",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-19956",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-20388",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2020-24977",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2020-7595",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3516",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3517",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3518",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3537",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3541",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-2309",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-23308",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-29824",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-40303",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-40304",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-49043",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-28484",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-29469",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-39615",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-45322",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-25062",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-34459",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-56171",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-12863",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-24928",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-27113",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-32414",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-32415",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-49794",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-49796",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-6021",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-6170",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-8732",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-9714",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3012-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3172-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3405-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3878-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-4064-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-4146-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-4251-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-4319-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5142-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5271-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5391-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5949-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5990-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2018-0732",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-0734",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-0735",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-5407",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-1543",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-1547",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-1549",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-1551",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-1563",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2020-1967",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2020-1971",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-23840",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-23841",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3449",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3450",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3711",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3712",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-4160",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-0778",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-1292",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-2068",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-2097",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-2274",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-3358",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-3602",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-3786",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-3996",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-4203",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-4304",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-4450",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-0215",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-0216",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-0217",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-0286",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-0401",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-0464",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-0465",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-0466",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-1255",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-2650",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-2975",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-3446",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-3817",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-5363",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-5678",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-6129",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-6237",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-0727",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-12797",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-13176",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-2511",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-4603",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-4741",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-5535",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-6119",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-9143",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-27587",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-4575",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-9230",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-9231",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-9232",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3008-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3325-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3449-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3530-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3942-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3942-2",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-4176-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-4321-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-4539-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-4539-3",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-4661-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-4807-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-4855-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-4875-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-4963-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5103-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5139-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5169-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5343-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5417-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5532-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5764-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-6015-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {
      "vulns": [
        {
          "id": "UBUNTU-CVE-2017-11164",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2011-4116",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-12837",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2017-12883",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-12015",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-18311",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-18312",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-18313",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-18314",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-6797",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-6798",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-6913",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2020-10543",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2020-10878",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2020-12723",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2020-16156",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-36770",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-48522",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-31484",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-31486",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-47038",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-56406",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-40909",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3926-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5902-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "DLA-3072-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3189-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3316-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3422-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3600-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3651-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3764-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5135-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2017-17512",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2005-2541",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-20482",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2019-9923",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-20193",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-48303",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2023-39804",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3755-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "DLA-3051-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3134-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3161-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3366-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3412-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3684-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3788-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3972-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-4085-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-4105-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-4403-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "DLA-4016-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2016-2779",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2018-7738",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-37600",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3995",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2021-3996",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2022-0563",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-28085",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-14104",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DLA-3782-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5055-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5650-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "DEBIAN-CVE-2022-1271",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2024-3094",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DEBIAN-CVE-2025-31115",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5123-1",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "DSA-5895-1",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2018-25032",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "ALPINE-CVE-2022-37434",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2018-25032",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "ALPINE-CVE-2022-37434",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2018-25032",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "ALPINE-CVE-2022-37434",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2022-37434",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/gh-annotations_with_vulns - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/go_packages_in_osv-scanner.json_format - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GO-2025-3849",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-3956",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4006",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4007",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4008",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4009",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4010",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4011",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4012",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4013",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4014",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4015",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4155",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GO-2025-4175",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GO-2025-3828",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/ignores_without_reason_should_be_explicitly_called_out - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/ignoring_.gitignore - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/json_output - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/nested_directories_are_checked_when_`--recursive`_is_passed - 1]
{
  "results": [
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/no_lockfiles_with_recursion_and_with_allow_flag_are_fine - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/no_lockfiles_with_recursion_but_without_allow_flag_are_fine - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/one_specific_supported_lockfile - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/one_specific_supported_lockfile_with_ignore - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/one_specific_supported_lockfile_with_offline_explicitly_false - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/one_specific_supported_sbom_with_duplicate_PURLs - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2018-25032",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "ALPINE-CVE-2022-37434",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/one_specific_supported_sbom_with_duplicate_PURLs_using_-L_flag - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2018-25032",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "ALPINE-CVE-2022-37434",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/one_specific_supported_sbom_with_invalid_PURLs - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/one_specific_supported_sbom_with_invalid_PURLs_using_-L_flag - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/one_specific_supported_sbom_with_vulns - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2018-25032",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "ALPINE-CVE-2022-37434",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/one_specific_supported_sbom_with_vulns_using_-L_flag - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2018-25032",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "ALPINE-CVE-2022-37434",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/only_the_files_in_the_given_directories_are_checked_by_default_(no_recursion) - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/output_format:_markdown_table - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/requirements.txt_can_have_all_kinds_of_names - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-68w8-qjq3-2gfm",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6w2r-r2m5-xq5w",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-7xr5-9hcq-chf9",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8x94-hmjh-97hq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-frmv-pr5f-9mcr",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-qw25-v68c-qjf3",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-rrqc-c2jx-6jgv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2021-98",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-68w8-qjq3-2gfm",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6w2r-r2m5-xq5w",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-7xr5-9hcq-chf9",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8x94-hmjh-97hq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-frmv-pr5f-9mcr",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-qw25-v68c-qjf3",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-rrqc-c2jx-6jgv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2021-98",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-2gwj-7jmv-h26r",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-53qw-q765-4fww",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6cw3-g6wv-c2xv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6w2r-r2m5-xq5w",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-7xr5-9hcq-chf9",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8c5j-9r9f-c6w8",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8x94-hmjh-97hq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-95rw-fx8r-36v6",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-frmv-pr5f-9mcr",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-jrh2-hc4r-7jwx",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-qw25-v68c-qjf3",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-rrqc-c2jx-6jgv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-v6rh-hp5x-86rv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-w24h-v9qh-8gxj",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2021-439",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-1",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-19",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-190",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-191",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-2",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-20",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-3",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-43qf-4rqw-9q2g",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-7rxf-gvfg-47g4",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-84pr-m4jr-85g5",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8vgw-p6qm-5gr7",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-hxwh-jpp2-84pm",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-xc3p-ff3m-f46v",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2020-43",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2024-71",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-jjg7-2v4v-x38h",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2024-60",
          "modified": "<RFC3339 date with the year 2024>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-jjg7-2v4v-x38h",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2024-60",
          "modified": "<RFC3339 date with the year 2024>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "PYSEC-2020-73",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-9hjg-9r4m-mvj7",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-9wx4-h78v-vm56",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-j8r2-6x86-q33q",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-74",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-9hjg-9r4m-mvj7",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-9wx4-h78v-vm56",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-j8r2-6x86-q33q",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-74",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-2xpw-w6gg-jr37",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-34jh-p97f-mpxf",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-g4mx-q9vg-27p4",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-gm62-xv2j-4w53",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-pq67-6m6q-mj2v",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-v845-jxx5-vc9f",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-wqvq-5m8c-6g24",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2020-148",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2021-108",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2023-192",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2023-212",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-2xpw-w6gg-jr37",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-34jh-p97f-mpxf",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-g4mx-q9vg-27p4",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-gm62-xv2j-4w53",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-pq67-6m6q-mj2v",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-v845-jxx5-vc9f",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-wqvq-5m8c-6g24",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2020-148",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2021-108",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2023-192",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2023-212",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-hgf8-39gv-g3f2",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-hgf8-39gv-g3f2",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-hgf8-39gv-g3f2",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/requirements.txt_can_have_all_kinds_of_names#01 - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-68w8-qjq3-2gfm",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6w2r-r2m5-xq5w",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-7xr5-9hcq-chf9",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8x94-hmjh-97hq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-frmv-pr5f-9mcr",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-qw25-v68c-qjf3",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-rrqc-c2jx-6jgv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2021-98",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-68w8-qjq3-2gfm",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6w2r-r2m5-xq5w",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-7xr5-9hcq-chf9",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8x94-hmjh-97hq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-frmv-pr5f-9mcr",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-qw25-v68c-qjf3",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-rrqc-c2jx-6jgv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2021-98",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-2gwj-7jmv-h26r",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-53qw-q765-4fww",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6cw3-g6wv-c2xv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6w2r-r2m5-xq5w",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-7xr5-9hcq-chf9",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8c5j-9r9f-c6w8",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8x94-hmjh-97hq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-95rw-fx8r-36v6",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-frmv-pr5f-9mcr",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-jrh2-hc4r-7jwx",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-qw25-v68c-qjf3",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-rrqc-c2jx-6jgv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-v6rh-hp5x-86rv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-w24h-v9qh-8gxj",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2021-439",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-1",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-19",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-190",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-191",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-2",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-20",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2022-3",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-43qf-4rqw-9q2g",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-7rxf-gvfg-47g4",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-84pr-m4jr-85g5",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8vgw-p6qm-5gr7",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-hxwh-jpp2-84pm",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-xc3p-ff3m-f46v",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2020-43",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2024-71",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-jjg7-2v4v-x38h",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2024-60",
          "modified": "<RFC3339 date with the year 2024>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-jjg7-2v4v-x38h",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2024-60",
          "modified": "<RFC3339 date with the year 2024>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "PYSEC-2020-73",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-9hjg-9r4m-mvj7",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-9wx4-h78v-vm56",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-j8r2-6x86-q33q",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-74",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-9hjg-9r4m-mvj7",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-9wx4-h78v-vm56",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-j8r2-6x86-q33q",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2023-74",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-2xpw-w6gg-jr37",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-34jh-p97f-mpxf",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-g4mx-q9vg-27p4",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-gm62-xv2j-4w53",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-pq67-6m6q-mj2v",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-v845-jxx5-vc9f",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-wqvq-5m8c-6g24",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2020-148",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2021-108",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2023-192",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2023-212",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-2xpw-w6gg-jr37",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-34jh-p97f-mpxf",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-g4mx-q9vg-27p4",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-gm62-xv2j-4w53",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-pq67-6m6q-mj2v",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-v845-jxx5-vc9f",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-wqvq-5m8c-6g24",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2020-148",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2021-108",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2023-192",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2023-212",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-hgf8-39gv-g3f2",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-hgf8-39gv-g3f2",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "vulns": [
        {
          "id": "GHSA-hgf8-39gv-g3f2",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand/TestCommand/spdx_2.3_output - 1]
{
  "results": [
    {},
    {
      "vulns": [
        {
          "id": "GHSA-9f46-5r25-5wfm",
          "modified": "<RFC3339 date with the year 2024>"
        }
      ]
    },
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/verbosity_level_=_error - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand/TestCommand/verbosity_level_=_info - 1]
{
  "results": [
    {}
  ]
}

---
